--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h2>Liniensuche</h2>
   Von
-  <form action="finder.php" method="post">
+  <form action="finder.php" method="post" id="searchForm">
     <select name="from" id="selectFrom">
       <option value="1">Kiewskaja</option>
       <option value="9">Marjino</option>
@@ -35,9 +35,9 @@
 
     <br>
     <br>
-    <input type="submit" value="Suchen">
+    <input type="submit" value="Submit">
   </form>
-  <!--<input type="button" value="&#128472;" onclick="swap()" />-->
+  <!--<input type="button" value="&#128472;" onclick="swap()" />
   <script>
     function swap()
     {
